--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,3 +16,6 @@ rsb = "rsb:main"
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["rsb"]
