--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,4 +18,5 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["rsb"]
+packages = ["stp"]
+sources = ["src"]
