--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,5 +18,5 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["stp"]
+packages = ["rsb"]
 sources = ["src"]
