--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ email = "64020210+arthurbrenno@users.noreply.github.com"
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
+[tool.hatch.build]
+packages = ["src/rsb"]
+
 [tool.hatch.build.targets.wheel]
-packages = ["rsb"]
-sources = ["src"]
+packages = ["src/rsb"]
