--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build]
-packages = ["src/rsb"]
+directories = { packages = ["src"] }
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/rsb"]
+packages = ["rsb"]
