--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "rock-solid-base"
-version = "v0.0.6"
+version = "v0.0.7"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13.1"
@@ -14,8 +14,8 @@ email = "64020210+arthurbrenno@users.noreply.github.com"
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
-[tool.hatch.build]
-directories = { packages = ["src"] }
+[tool.hatch.build.directories]
+packages = ["src"]
 
 [tool.hatch.build.targets.wheel]
 packages = ["rsb"]
