--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "rock-solid-base"
-version = "v0.0.10"
+version = "v0.0.11"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
@@ -21,6 +21,4 @@ packages = ["rsb"]
 packages = ["rsb"]
 
 [dependency-groups]
-dev = [
-    "pytest>=8.3.5",
-]
+dev = ["pytest>=8.3.5"]
