--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,10 @@
 [project]
 name = "rock-solid-base"
-version = "v0.0.11"
+version = "v0.0.12"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = [
-    "pydantic>=2.11.3",
-]
+dependencies = ["pydantic>=2.11.3"]
 
 [[project.authors]]
 name = "Arthur Brenno"
@@ -23,7 +21,4 @@ packages = ["rsb"]
 packages = ["rsb"]
 
 [dependency-groups]
-dev = [
-    "pytest>=8.3.5",
-    "pytest-mock>=3.14.0",
-]
+dev = ["pytest>=8.3.5", "pytest-mock>=3.14.0"]
