--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,4 +21,8 @@ packages = ["rsb"]
 packages = ["rsb"]
 
 [dependency-groups]
-dev = ["pytest>=8.3.5", "pytest-mock>=3.14.0"]
+dev = [
+    "msgspec>=0.19.0",
+    "pytest>=8.3.5",
+ "pytest-mock>=3.14.0",
+]
