--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "rock-solid-base"
-version = "v0.0.14"
+version = "v0.0.15"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
@@ -21,8 +21,4 @@ packages = ["rsb"]
 packages = ["rsb"]
 
 [dependency-groups]
-dev = [
-    "msgspec>=0.19.0",
-    "pytest>=8.3.5",
- "pytest-mock>=3.14.0",
-]
+dev = ["msgspec>=0.19.0", "pytest>=8.3.5", "pytest-mock>=3.14.0"]
