feat: new MimeType class

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -43,5 +43,6 @@
         "terminal.ansiRed": "#D16969",
         "terminal.ansiWhite": "#D4D4D4",
         "terminal.ansiYellow": "#D7BA7D"
-    }
+    },
+    "python.analysis.typeCheckingMode": "basic"
 }
