--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,4 +21,9 @@ packages = ["rsb"]
 packages = ["rsb"]
 
 [dependency-groups]
-dev = ["msgspec>=0.19.0", "pytest>=8.3.5", "pytest-mock>=3.14.0"]
+dev = [
+    "msgspec>=0.19.0",
+ "pytest>=8.3.5",
+ "pytest-mock>=3.14.0",
+ "python-magic>=0.4.27",
+]
